Add prev and next buttons

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,11 @@
         <div id="progress-ring-background"></div>
         <div class="indicators-inner">
           <div id="remaining"></div>
-          <button id="play-pause-button"><img /></button>
+          <div id="buttons">
+            <button id="prev-button"><img /></button>
+            <button id="play-pause-button"><img /></button>
+            <button id="next-button"><img /></button>
+          </div>
         </div>
       </div>
       <div class="tomatos">
@@ -38,8 +42,7 @@
         <span class="status" id="shot-break-label">shot break</span>
         <span class="status" id="long-break-label">long break</span>
       </div>
-        <button class="status" id="reset-button">reset</button>
-      </div>
+      <button class="status" id="reset-button">reset</button>
     </div>
     <script src="./main.mjs" type="module"></script>
   </body>
